# ocsigen-i18n

./: .gitignore  README.MD  dune  how.json  i18n_generate.mll  i18n_ppx_checker.ml  index.html  instructions  ocsigen-i18n.opam  versions.json
.github/workflows/: doc.yml  siteupdate.yml
1.0/manual/: generator.html  intro.html  ppx.html  templates.html
2.0/manual/: generator.html  intro.html  ppx.html  templates.html
3.0/manual/: generator.html  intro.html  ppx.html  templates.html
4.0/manual/: generator.html  intro.html  ppx.html  templates.html
5.0/: Ppx-I18n_ppx_rewriter.md  index.html  index.md  intro.html  llms-full.txt  ppx.html  templates.md
5.0/Ppx/I18n_ppx_rewriter/: index.html
5.0/manual/: generator.html  intro.html  ppx.html  templates.html
5.0/ocsigen-i18n/: generator.html  templates.html
5.0/ocsigen-i18n/Ppx/: index.html
_build/: .db  .digest-db  trace.csexp
_build/default/: i18n_generate.ml  i18n_ppx_checker.ml  i18n_ppx_rewriter.ml  ppx.ml-gen
_build/default/.dune/: configurator  configurator.v2
_build/default/.merlin-conf/: exe-i18n_generate  exe-i18n_ppx_checker  exe-i18n_rewriter  lib-ocsigen-i18n
_build/default/.ppx.objs/: ppx__I18n_ppx_rewriter.impl.d
_build/default/test/: example.tsv
dev/: Ppx.md  generator.html  generator.md  index.html  intro.html  intro.md  llms-full.txt  llms.txt  ppx.html  ppx.md  templates.html
dev/Ppx/: index.html
dev/Ppx/I18n_ppx_rewriter/: index.html
dev/manual/: generator.html  intro.html  ppx.html  templates.html
dev/ocsigen-i18n/: index.html  intro.html  ppx.html
doc/: README.md  dune  generator.mld  index.mld  intro.mld  ppx.mld  templates.mld  wodoc
doc/1.0/manual/: generator.wiki  intro.wiki
doc/2.0/manual/: generator.wiki
doc/3.0/manual/: templates.wiki
doc/4.0/manual/: generator.wiki  ppx.wiki
doc/5.0/manual/: generator.wiki  intro.wiki
test/: dune  example.tsv  extra.tsv  run_tests.sh  test_ppx.ml  test_ppx_tyxml.ml
test/expected/: default.expected  eliom.expected  header_eliom.expected  header_tyxml.expected  ppx_output.expected  ppx_tyxml_output.expected  primary.expected  primary_eliom.expected  tyxml.expected
(+23 files in other folders)
